tools/syntax_stubs.h

int strcmp(const char *a, const char *b);
unsigned long strlen(const char *s);
#define _(s) (s)
#define zlen(s) ((ptrdiff_t)strlen(s))
typedef struct Hash HASH;
typedef struct jfile JFILE;
const char *my_gettext(const char *s);
char *zdup(const char *s);
void vsrm(char *v);
HASH *htmk(ptrdiff_t len);
void *htadd(HASH *ht, const char *name, void *val);
void *htfind(HASH *ht, const char *name);
const char *atom_add(const char *name);
char *jfgets(char *buf, int len, JFILE *f);
int jfclose(JFILE *f);
char *open_config_file(JFILE **result, const char *prefix, const char *name, const char *suffix);
int parse_ws(const char **p, int cmt);
int parse_field(const char **p, const char *field);